force-app/main/default/objects/Case/fields/Actual_Release_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Release_Date_Time__c</fullName>
    <label>Actual Release Date/Time</label>
    <type>DateTime</type>
</CustomField>