force-app/main/default/objects/Case/fields/Adv_Charges_Max_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>Adv_Charges_Max_Authorized_Amount__c</fullName>
    <label>Adv. Charges Max. Authorized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>