force-app/main/default/objects/Case/fields/Agent_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Agent_Reviewed__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Reviewed</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Buyer_Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>