force-app/main/default/objects/Case/fields/Anticipated_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Pickup_Date_Time__c</fullName>
    <label>Anticipated Pickup Date/Time</label>
    <type>DateTime</type>
</CustomField>