force-app/main/default/objects/Case/fields/BI_ID__c.field-meta.xml
<CustomField>
    <fullName>BI_ID__c</fullName>
    <description>Used for linking accounts to historic cases from KAR</description>
    <label>BI ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>