force-app/main/default/objects/Case/fields/Buyer_does_not_Exist__c.field-meta.xml
<CustomField>
    <fullName>Buyer_does_not_Exist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to  closed case when Buyer is not availalble</description>
    <label>Buyer does not Exist</label>
    <type>Checkbox</type>
</CustomField>