force-app/main/default/objects/Case/fields/Buyer_ID__c.field-meta.xml
<CustomField>
    <fullName>Buyer_ID__c</fullName>
    <label>Buyer ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>