force-app/main/default/objects/Case/fields/Can_you_still_do_your_job__c.field-meta.xml
<CustomField>
    <fullName>Can_you_still_do_your_job__c</fullName>
    <label>Can you still do your job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Partially</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>