force-app/main/default/objects/Case/fields/Case_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Case_Subtype__c</fullName>
    <description>This is exteral case subtype used by IAA Help - Web to case</description>
    <inlineHelpText>External case type used by guest users on IAA Help Page</inlineHelpText>
    <label>Case Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Case_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>IOS (iPhone, ipad)</fullName>
            </value>
            <value>
                <fullName>Android / Other device</fullName>
            </value>
            <value>
                <fullName>Unable to Bid</fullName>
            </value>
            <value>
                <fullName>Bid Dispute</fullName>
            </value>
            <value>
                <fullName>Auction Feedback</fullName>
            </value>
            <value>
                <fullName>IBuy Fast / Buy Now</fullName>
            </value>
            <value>
                <fullName>AuctionNow</fullName>
            </value>
            <value>
                <fullName>General Bidding Inquiries</fullName>
            </value>
            <value>
                <fullName>Late and/or Storage Fees</fullName>
            </value>
            <value>
                <fullName>Renege Fee</fullName>
            </value>
            <value>
                <fullName>Sales Tax</fullName>
            </value>
            <value>
                <fullName>Registration Fee</fullName>
            </value>
            <value>
                <fullName>All Other Fees</fullName>
            </value>
            <value>
                <fullName>Auction Rules</fullName>
            </value>
            <value>
                <fullName>Branch Locations / Hours of Operation</fullName>
            </value>
            <value>
                <fullName>Sell My Car with IAA</fullName>
            </value>
            <value>
                <fullName>Donate My Car</fullName>
            </value>
            <value>
                <fullName>Use My Account Credit</fullName>
            </value>
            <value>
                <fullName>All Other General Inquiries</fullName>
            </value>
            <value>
                <fullName>Check Writing Privileges</fullName>
            </value>
            <value>
                <fullName>NSF (Non-sufficient Funds)</fullName>
            </value>
            <value>
                <fullName>How Do I Finance a Vehicle?</fullName>
            </value>
            <value>
                <fullName>Receipt and Report Request</fullName>
            </value>
            <value>
                <fullName>IPAY</fullName>
            </value>
            <value>
                <fullName>Credit Cards</fullName>
            </value>
            <value>
                <fullName>Payment Applied Incorrectly</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Other Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Account Credit Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>