force-app/main/default/objects/Case/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <description>This is the external case type, used by IAA Help page - web to case</description>
    <inlineHelpText>External case type used by guest users on IAA Help Page</inlineHelpText>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Password Reset</fullName>
            </value>
            <value>
                <fullName>IAA Phone Apps</fullName>
            </value>
            <value>
                <fullName>Bidding</fullName>
            </value>
            <value>
                <fullName>Fee Inquiries</fullName>
            </value>
            <value>
                <fullName>General Inquiry</fullName>
            </value>
            <value>
                <fullName>Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Registration</fullName>
            </value>
            <value>
                <fullName>Title</fullName>
            </value>
            <value>
                <fullName>Vehicle</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>