force-app/main/default/objects/Case/fields/close_date__c.field-meta.xml
<CustomField>
    <fullName>close_date__c</fullName>
    <label>close date</label>
    <type>DateTime</type>
</CustomField>