force-app/main/default/objects/Case/fields/CRC_Adjuster__c.field-meta.xml
<CustomField>
    <fullName>CRC_Adjuster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adjuster</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>ReleaseAssignments</relationshipName>
    <type>Lookup</type>
</CustomField>