force-app/main/default/objects/Case/fields/CRC_Assignment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Assignment_Date_Time__c</fullName>
    <label>Assignment Date/Time</label>
    <type>DateTime</type>
</CustomField>