force-app/main/default/objects/Case/fields/CRC_Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Assignment_Type__c</fullName>
    <label>Assignment Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VIC</fullName>
            </value>
            <value>
                <fullName>Tow Only</fullName>
            </value>
            <value>
                <fullName>CAT</fullName>
            </value>
            <value>
                <fullName>Title Work Only</fullName>
            </value>
            <value>
                <fullName>Priority Tow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>