force-app/main/default/objects/Case/fields/CRC_At_Home_Requirement__c.field-meta.xml
<CustomField>
    <fullName>CRC_At_Home_Requirement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>At Home Requirement?</label>
    <type>Checkbox</type>
</CustomField>