force-app/main/default/objects/Case/fields/CRC_Authorized_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Authorized_Date_Time__c</fullName>
    <label>Authorized Date/Time</label>
    <type>DateTime</type>
</CustomField>