force-app/main/default/objects/Case/fields/CRC_Authorizer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_Authorizer_Last_Name__c</fullName>
    <label>Authorizer Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>