force-app/main/default/objects/Case/fields/CRC_Bid_Approval_Request__c.field-meta.xml
<CustomField>
    <fullName>CRC_Bid_Approval_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bid Approval Request</label>
    <type>Checkbox</type>
</CustomField>