force-app/main/default/objects/Case/fields/CRC_Body_Style__c.field-meta.xml
<CustomField>
    <fullName>CRC_Body_Style__c</fullName>
    <label>Body Style</label>
    <length>30</length>
    <type>Text</type>
</CustomField>