force-app/main/default/objects/Case/fields/CRC_Branch_Manager__c.field-meta.xml
<CustomField>
    <fullName>CRC_Branch_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (Branch Manager)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>