force-app/main/default/objects/Case/fields/CRC_Calim_Suffix__c.field-meta.xml
<CustomField>
    <fullName>CRC_Calim_Suffix__c</fullName>
    <label>Calim Suffix #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>