force-app/main/default/objects/Case/fields/CRC_Call_Before_Coming__c.field-meta.xml
<CustomField>
    <fullName>CRC_Call_Before_Coming__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Before Coming?</label>
    <type>Checkbox</type>
</CustomField>