force-app/main/default/objects/Case/fields/CRC_Cancel_Reason__c.field-meta.xml
<CustomField>
    <fullName>CRC_Cancel_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAR</fullName>
                <label>Car is Repairable</label>
            </value>
            <value>
                <fullName>CLC</fullName>
                <label>Claimant Car</label>
            </value>
            <value>
                <fullName>CLD</fullName>
                <label>Claim Denial</label>
            </value>
            <value>
                <fullName>NOR</fullName>
                <label>No Owner Release</label>
            </value>
            <value>
                <fullName>NSD</fullName>
                <label>No Sale Disposal</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>OWR</fullName>
                <label>Owner Retain</label>
            </value>
            <value>
                <fullName>SPR</fullName>
                <label>Salvage Provider Request</label>
            </value>
            <value>
                <fullName>ttest1</fullName>
                <isActive>false</isActive>
                <label>ttest1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>