force-app/main/default/objects/Case/fields/CRC_Cancellation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Cancellation_Date_Time__c</fullName>
    <label>Cancellation Date/Time</label>
    <type>DateTime</type>
</CustomField>