force-app/main/default/objects/Case/fields/CRC_CAT_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_CAT_Name__c</fullName>
    <label>CAT Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>