force-app/main/default/objects/Case/fields/CRC_Charges_Cleared__c.field-meta.xml
<CustomField>
    <fullName>CRC_Charges_Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Charges Cleared</label>
    <type>Checkbox</type>
</CustomField>