force-app/main/default/objects/Case/fields/CRC_Check_in_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Check_in_Date_Time__c</fullName>
    <label>Check-in Date/Time</label>
    <type>DateTime</type>
</CustomField>