force-app/main/default/objects/Case/fields/CRC_Checksum__c.field-meta.xml
<CustomField>
    <fullName>CRC_Checksum__c</fullName>
    <label>Checksum</label>
    <length>255</length>
    <type>Text</type>
</CustomField>