force-app/main/default/objects/Case/fields/CRC_Claim__c.field-meta.xml
<CustomField>
    <fullName>CRC_Claim__c</fullName>
    <label>Claim #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>