force-app/main/default/objects/Case/fields/CRC_Close_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Close_Date_Time__c</fullName>
    <label>Close Date/Time</label>
    <type>DateTime</type>
</CustomField>