force-app/main/default/objects/Case/fields/CRC_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CRC_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>