force-app/main/default/objects/Case/fields/CRC_Contact_Adjuster__c.field-meta.xml
<CustomField>
    <fullName>CRC_Contact_Adjuster__c</fullName>
    <label>Contact Adjuster</label>
    <length>30</length>
    <type>Text</type>
</CustomField>