force-app/main/default/objects/Case/fields/CRC_Cylinders__c.field-meta.xml
<CustomField>
    <fullName>CRC_Cylinders__c</fullName>
    <label>Cylinders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Rotary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>