force-app/main/default/objects/Case/fields/CRC_Date_of_Loss__c.field-meta.xml
<CustomField>
    <fullName>CRC_Date_of_Loss__c</fullName>
    <label>Date of Loss</label>
    <type>Date</type>
</CustomField>