force-app/main/default/objects/Case/fields/CRC_Drive__c.field-meta.xml
<CustomField>
    <fullName>CRC_Drive__c</fullName>
    <label>Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>4</fullName>
                <label>4x4</label>
            </value>
            <value>
                <fullName>A</fullName>
                <label>AWD</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>FWD</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>RWD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>