force-app/main/default/objects/Case/fields/CRC_Dry_Run_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Dry_Run_Date_Time__c</fullName>
    <label>Dry Run Date/Time</label>
    <type>DateTime</type>
</CustomField>