force-app/main/default/objects/Case/fields/CRC_Due_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Due_Date_Time__c</fullName>
    <label>Due Date/Time</label>
    <type>DateTime</type>
</CustomField>