force-app/main/default/objects/Case/fields/CRC_Earliest_Available_Pickup__c.field-meta.xml
<CustomField>
    <fullName>CRC_Earliest_Available_Pickup__c</fullName>
    <label>Earliest Available Pickup</label>
    <type>DateTime</type>
</CustomField>