force-app/main/default/objects/Case/fields/CRC_Empty_Weight__c.field-meta.xml
<CustomField>
    <fullName>CRC_Empty_Weight__c</fullName>
    <label>Empty Weight</label>
    <length>4</length>
    <type>Text</type>
</CustomField>