force-app/main/default/objects/Case/fields/CRC_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CRC_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>