force-app/main/default/objects/Case/fields/CRC_Engine__c.field-meta.xml
<CustomField>
    <fullName>CRC_Engine__c</fullName>
    <label>Engine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>