force-app/main/default/objects/Case/fields/CRC_Exterior_Color__c.field-meta.xml
<CustomField>
    <fullName>CRC_Exterior_Color__c</fullName>
    <label>Exterior Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BG</fullName>
                <label>Beige</label>
            </value>
            <value>
                <fullName>BK</fullName>
                <label>Black</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Blue</label>
            </value>
            <value>
                <fullName>BR</fullName>
                <label>Brown</label>
            </value>
            <value>
                <fullName>BY</fullName>
                <label>Burgundy</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>Champagne</label>
            </value>
            <value>
                <fullName>CR</fullName>
                <label>Cream</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Dark Blue</label>
            </value>
            <value>
                <fullName>DB</fullName>
                <label>Dark Brown</label>
            </value>
            <value>
                <fullName>GD</fullName>
                <label>Gold</label>
            </value>
            <value>
                <fullName>GY</fullName>
                <label>Gray</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>Green</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <label>Light Blue</label>
            </value>
            <value>
                <fullName>MR</fullName>
                <label>Maroon</label>
            </value>
            <value>
                <fullName>NV</fullName>
                <label>Navy</label>
            </value>
            <value>
                <fullName>OR</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>PW</fullName>
                <label>Pewter</label>
            </value>
            <value>
                <fullName>PK</fullName>
                <label>Pink</label>
            </value>
            <value>
                <fullName>PR</fullName>
                <label>Purple</label>
            </value>
            <value>
                <fullName>RD</fullName>
                <label>Red</label>
            </value>
            <value>
                <fullName>SL</fullName>
                <label>Silver</label>
            </value>
            <value>
                <fullName>TN</fullName>
                <label>Tan</label>
            </value>
            <value>
                <fullName>TL</fullName>
                <label>Teal</label>
            </value>
            <value>
                <fullName>TQ</fullName>
                <label>Turquoise</label>
            </value>
            <value>
                <fullName>WH</fullName>
                <label>White</label>
            </value>
            <value>
                <fullName>YL</fullName>
                <label>Yellow</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>