force-app/main/default/objects/Case/fields/CRC_Fuel_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Fuel_Type__c</fullName>
    <label>Fuel Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N</fullName>
                <label>Compressed natural gas</label>
            </value>
            <value>
                <fullName>D</fullName>
                <label>Diesel</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Electric</label>
            </value>
            <value>
                <fullName>H</fullName>
                <label>Ethanol fuel only</label>
            </value>
            <value>
                <fullName>F</fullName>
                <label>Flexible fuel</label>
            </value>
            <value>
                <fullName>G</fullName>
                <label>Gas</label>
            </value>
            <value>
                <fullName>C</fullName>
                <label>Gasoline engine</label>
            </value>
            <value>
                <fullName>B</fullName>
                <label>Hybrid engine</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Methanol gas only</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Propane gas</label>
            </value>
            <value>
                <fullName>X</fullName>
                <isActive>false</isActive>
                <label>X</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>