force-app/main/default/objects/Case/fields/CRC_Is_Vehicle_There__c.field-meta.xml
<CustomField>
    <fullName>CRC_Is_Vehicle_There__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Vehicle There?</label>
    <type>Checkbox</type>
</CustomField>