force-app/main/default/objects/Case/fields/CRC_IsOwnerAUser__c.field-meta.xml
<CustomField>
    <fullName>CRC_IsOwnerAUser__c</fullName>
    <formula>BEGINS( OwnerId , &quot;005&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRC_IsOwnerAUser?</label>
    <type>Checkbox</type>
</CustomField>