force-app/main/default/objects/Case/fields/CRC_Keys_with_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>CRC_Keys_with_Vehicle__c</fullName>
    <label>Keys with Vehicle?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>