force-app/main/default/objects/Case/fields/CRC_Last_Worked_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Last_Worked_Date_Time__c</fullName>
    <label>Last Worked Date/Time</label>
    <type>DateTime</type>
</CustomField>