force-app/main/default/objects/Case/fields/CRC_Latest_Available_Pickup_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Latest_Available_Pickup_Time__c</fullName>
    <label>Latest Available Pickup Time</label>
    <type>DateTime</type>
</CustomField>