force-app/main/default/objects/Case/fields/CRC_License_Plate__c.field-meta.xml
<CustomField>
    <fullName>CRC_License_Plate__c</fullName>
    <label>License Plate #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>