force-app/main/default/objects/Case/fields/CRC_License_State_Code__c.field-meta.xml
<CustomField>
    <fullName>CRC_License_State_Code__c</fullName>
    <label>License State Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>AB</fullName>
            </value>
            <value>
                <fullName>BC</fullName>
            </value>
            <value>
                <fullName>MB</fullName>
            </value>
            <value>
                <fullName>NB</fullName>
            </value>
            <value>
                <fullName>NF</fullName>
            </value>
            <value>
                <fullName>NS</fullName>
            </value>
            <value>
                <fullName>NT</fullName>
            </value>
            <value>
                <fullName>NU</fullName>
            </value>
            <value>
                <fullName>ON</fullName>
            </value>
            <value>
                <fullName>PE</fullName>
            </value>
            <value>
                <fullName>PQ</fullName>
            </value>
            <value>
                <fullName>QC</fullName>
            </value>
            <value>
                <fullName>SK</fullName>
            </value>
            <value>
                <fullName>YT</fullName>
            </value>
            <value>
                <fullName>AV</fullName>
            </value>
            <value>
                <fullName>BV</fullName>
            </value>
            <value>
                <fullName>CA</fullName>
            </value>
            <value>
                <fullName>CO</fullName>
            </value>
            <value>
                <fullName>EP</fullName>
            </value>
            <value>
                <fullName>ES</fullName>
            </value>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>HU</fullName>
            </value>
            <value>
                <fullName>IZ</fullName>
            </value>
            <value>
                <fullName>JA</fullName>
            </value>
            <value>
                <fullName>JU</fullName>
            </value>
            <value>
                <fullName>QE</fullName>
            </value>
            <value>
                <fullName>QO</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>