force-app/main/default/objects/Case/fields/CRC_Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Loss_Type__c</fullName>
    <label>Loss Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLS</fullName>
                <label>Collision</label>
            </value>
            <value>
                <fullName>FIR</fullName>
                <label>Fire</label>
            </value>
            <value>
                <fullName>FLD</fullName>
                <label>Flood/Water</label>
            </value>
            <value>
                <fullName>OTH</fullName>
                <label>Other</label>
            </value>
            <value>
                <fullName>THF</fullName>
                <label>Theft</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>