force-app/main/default/objects/Case/fields/CRC_Make__c.field-meta.xml
<CustomField>
    <fullName>CRC_Make__c</fullName>
    <label>Make</label>
    <length>25</length>
    <type>Text</type>
</CustomField>