force-app/main/default/objects/Case/fields/CRC_Managed_By_Code__c.field-meta.xml
<CustomField>
    <fullName>CRC_Managed_By_Code__c</fullName>
    <label>Managed By Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>