force-app/main/default/objects/Case/fields/CRC_Managed_By_Description__c.field-meta.xml
<CustomField>
    <fullName>CRC_Managed_By_Description__c</fullName>
    <label>Managed By Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>