force-app/main/default/objects/Case/fields/CRC_Maximum_Authorized_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRC_Maximum_Authorized_Amount__c</fullName>
    <label>Maximum Authorized Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>