force-app/main/default/objects/Case/fields/CRC_Mileage__c.field-meta.xml
<CustomField>
    <fullName>CRC_Mileage__c</fullName>
    <label>Mileage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>