force-app/main/default/objects/Case/fields/CRC_Min_Bid_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRC_Min_Bid_Amount__c</fullName>
    <label>Min. Bid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>