force-app/main/default/objects/Case/fields/CRC_Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>CRC_Odometer_Reading__c</fullName>
    <label>Odometer Reading</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>