force-app/main/default/objects/Case/fields/CRC_Open_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Open_Date_Time__c</fullName>
    <label>Open_Date_Time</label>
    <type>DateTime</type>
</CustomField>