force-app/main/default/objects/Case/fields/CRC_Outside_Storage_Days__c.field-meta.xml
<CustomField>
    <fullName>CRC_Outside_Storage_Days__c</fullName>
    <label>Outside Storage Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>