force-app/main/default/objects/Case/fields/CRC_Pickup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CRC_Pickup_Date_Time__c</fullName>
    <label>Pickup Date/Time</label>
    <type>DateTime</type>
</CustomField>