force-app/main/default/objects/Case/fields/CRC_Pickup_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>CRC_Pickup_Location_Type__c</fullName>
    <label>Pickup Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RESIDENTIAL</fullName>
            </value>
            <value>
                <fullName>BUSINESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>