force-app/main/default/objects/Case/fields/CRC_Policy__c.field-meta.xml
<CustomField>
    <fullName>CRC_Policy__c</fullName>
    <label>Policy #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>