force-app/main/default/objects/Case/fields/CRC_Prepaid_Adv_Charges_Through_Date__c.field-meta.xml
<CustomField>
    <fullName>CRC_Prepaid_Adv_Charges_Through_Date__c</fullName>
    <label>Prepaid Adv. Charges Through Date</label>
    <type>Date</type>
</CustomField>