force-app/main/default/objects/Case/fields/CRC_Prepaid_Capture_Allowed__c.field-meta.xml
<CustomField>
    <fullName>CRC_Prepaid_Capture_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prepaid Capture Allowed?</label>
    <type>Checkbox</type>
</CustomField>