force-app/main/default/objects/Case/fields/CRC_Prepaid_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>CRC_Prepaid_Total_Amount__c</fullName>
    <label>Prepaid Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>